[gd_scene load_steps=16 format=3 uid="uid://dwhpkkqatrbb6"]

[ext_resource type="Script" path="res://menus/main_menu/main_menu.gd" id="4"]
[ext_resource type="Shader" path="res://-tests/heli_test/shaders/canvas_blur.gdshader" id="5"]
[ext_resource type="Script" path="res://hud/fps_label/fps_label.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://b1jkumvlcducb" path="res://menus/main_menu/images/title.png" id="7"]
[ext_resource type="AudioStream" uid="uid://jf5ltqw2kkrr" path="res://audio/music/White Bat Audio - Man Bat.mp3" id="8"]
[ext_resource type="Texture2D" uid="uid://dlqxnur5l3b85" path="res://menus/main_menu/images/main_logo.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dmgx3combxkhx" path="res://menus/main_menu/images/MainMenuBackground.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bdl7rck2e8bcg" path="res://menus/main_menu/images/main_menu_overlay_stripe.png" id="11"]
[ext_resource type="PackedScene" path="res://-tests/heli_test/ui/nodes/BlurBackground.tscn" id="12"]
[ext_resource type="PackedScene" path="res://menus/components/settings_menu/settings_menu.tscn" id="13"]
[ext_resource type="Shader" path="res://shaders/main_menu_grid_shader.tres" id="16"]
[ext_resource type="PackedScene" path="res://menus/components/ControlHelp.tscn" id="17"]

[sub_resource type="ShaderMaterial" id="10"]
shader = ExtResource("5")
shader_parameter/amount = 2.0

[sub_resource type="ShaderMaterial" id="8"]
shader = ExtResource("16")
shader_parameter/battery = 0.05
shader_parameter/anchor = -0.5
shader_parameter/speed_scale = -1.0
shader_parameter/fov = 0.01
shader_parameter/background_color = Color(0, 0, 0, 0.611765)
shader_parameter/grid_color = Color(0.847059, 0, 0.0509804, 0.501961)

[sub_resource type="Theme" id="11"]

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("4")
level = "res://menus/briefings/level_1_briefing/level_1_briefing.tscn"

[node name="BackgroundImage" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10")
stretch_mode = 1

[node name="BlurBackground" parent="." instance=ExtResource("12")]
material = SubResource("10")
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("8")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StripRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -369.5
offset_top = -540.0
offset_right = 369.5
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11")

[node name="FpsLabel" type="Label" parent="."]
visible = false
offset_right = 64.0
offset_bottom = 20.0
text = "FPS: 60"
script = ExtResource("6")

[node name="Logo" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.0
offset_top = -297.0
offset_right = 359.0
offset_bottom = 473.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9")

[node name="Title" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.5
offset_top = -520.0
offset_right = 274.5
offset_bottom = -273.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7")

[node name="InGameMenu2" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="InGameMenu2"]
modulate = Color(0, 1, 0.392157, 1)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = 300.0
offset_bottom = -40.0
grow_vertical = 0
alignment = 2

[node name="start" type="Button" parent="InGameMenu2/Buttons"]
layout_mode = 2
text = " Start"

[node name="BlurBackground" parent="InGameMenu2/Buttons/start" instance=ExtResource("12")]
material = SubResource("10")
layout_mode = 1
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="settings" type="Button" parent="InGameMenu2/Buttons"]
visible = false
layout_mode = 2
text = " Settings"

[node name="BlurBackground" parent="InGameMenu2/Buttons/settings" instance=ExtResource("12")]
material = SubResource("10")
layout_mode = 1
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="quit" type="Button" parent="InGameMenu2/Buttons"]
layout_mode = 2
text = " Quit To Desktop"

[node name="BlurBackground" parent="InGameMenu2/Buttons/quit" instance=ExtResource("12")]
material = SubResource("10")
layout_mode = 1
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="ControlHelp" parent="InGameMenu2" instance=ExtResource("17")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 407.0
offset_bottom = 290.0

[node name="LabelExoWolfVersion" type="Label" parent="InGameMenu2"]
modulate = Color(0, 1, 0.392157, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -103.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("11")
text = "ExoWolf - v0.1"

[node name="LabelInfo2" type="Label" parent="InGameMenu2"]
modulate = Color(0, 1, 0.392157, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = 106.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("11")
text = "Sam Keightley - N8542724
IGB400 - Game Studio 3 - Game Innovation
"

[node name="LabelFPS" type="Label" parent="InGameMenu2"]
visible = false
modulate = Color(0, 1, 0.392157, 1)
layout_mode = 0
offset_right = 80.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("11")
text = "FPS: {fps}"

[node name="SettingsMenu" parent="." instance=ExtResource("13")]
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")
autoplay = true

[connection signal="pressed" from="InGameMenu2/Buttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="InGameMenu2/Buttons/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="InGameMenu2/Buttons/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="InGameMenu2/Buttons/quit" to="InGameMenu2" method="_on_quit_pressed"]
